Fixed date inputs being too big for column.

--- a/app/assets/stylesheets/app-overrides.css.scss
+++ b/app/assets/stylesheets/app-overrides.css.scss
@@ -43,6 +43,7 @@
 
 .date-field {
   height: 30px !important;
+  width:  90px;
 }
 
 td.date-cell .field_with_errors {
